# crewplane

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  GEMINI.md  Makefile  README.md  SECURITY.md  install.sh  pyproject.toml
.agents/skills/create-workflows/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
docs/: features.md  index.md
docs/architecture/: index.md  modular-orchestration-architecture.md  ui_compact_dashboard.md  ui_layer_proposal.md
docs/architecture/adr/: 0001-ports-adapters-runtime-integrations.md  0002-auto-sized-tmux-log-tail.md  0003-mock-invoker.md  0004-log-streaming.md  0005-deeper-workflow-validation.md  0006-workflow-composition-primitives.md  0007-template-reference-failures.md  0008-corrupt-manifest-skip-behavior.md  0009-context-hash-idempotency.md  0010-core-positioning-infrastructure-as-code.md  0011-review-execution-workflow-optimization.md  0012-preflight-compiled-runtime-execution-plan.md  0013-version-source-of-truth-and-documentation-drift-reduction.md  0014-artifact-backed-node-boundary-resume.md  0015-display-only-provider-log-presentation.md  0016-node-scoped-git-workspace-isolation.md
docs/concepts/: orchestration-model.md  preflight-and-idempotency.md  why-crewplane.md  workflows.md
docs/examples/: composition.md  index.md  workspace.md
docs/getting-started/: installation.md  provider-setup.md  quickstart.md  setup-checklist.md
docs/guides/: cleanup.md  findings-and-review-loops.md  inspecting-artifacts.md  mock-validation.md  node-modes.md  observability.md  running-workflows.md  workflow-composition.md  workspace-isolation.md
docs/guides/experimental-worktree-implementation/: 00-rationale.md  01-boundaries-model-config.md  02-validation-rules.md  03-source-policy-git-contract.md  04-preflight-file-contract.md  05-runtime-strategies.md  06-retries-review-invocation.md  07-result-bundles-state.md  08-lifecycle-locking-cleanup.md  09-resume-cancellation-security-ux.md  10-implementation-tests.md  11-alternatives-consequences.md  index.md
docs/reference/: artifacts.md  commands.md  configuration.md  integrations.md  workflow-syntax.md
docs/safety/: reproducible-support-bundle.md  security-and-trust.md  troubleshooting.md
packaging/: release_checks.py
packaging/homebrew/: README.md
packaging/homebrew/Formula/: crewplane.rb
packaging/npm/: README.md  package.json
packaging/npm/scripts/: postinstall.js
scripts/: release.py
scripts/release/: __init__.py  build.py  publish.py  smoke.py  state.py  state_checks.py  state_state.py  state_sync.py  state_types.py
src/crewplane/: __init__.py
src/crewplane/architecture/: __init__.py  registry.py
src/crewplane/artifacts/: atomic.py  directory_manager.py  failure_artifacts.py  manager.py  run_history.py
src/crewplane/bootstrap/: __init__.py  container.py  runtime_config.py
src/crewplane/cli/: app.py  cleanup.py  dry_run.py  paths.py  templates.py  workflow_runner.py
src/crewplane/core/: __init__.py  config.py  execution_state.py  file_hashing.py  prompt_segments.py  review_contract.py  state_paths.py  token_budget.py  value_checks.py
src/crewplane/example_templates/: code-review-example.task.md  config.yml  single-agent-review.task.md
src/crewplane/observability/: dag_graph.py  dag_render.py  layout.py  log_stream.py  node_order.py  observer.py  observer_lifecycle.py  runtime.py  text_layout.py  types.py
src/orchestrator_cli/: __init__.py  version.py  versions.py
src/orchestrator_cli/architecture/: __init__.py  api_version.py  errors.py  loader.py  registry.py
src/orchestrator_cli/artifacts/: __init__.py  directory_manager.py  failure_artifacts.py  findings_extraction.py  generated_file_detection.py  generated_files.py  lock_manifest.py  locks.py  manager.py  naming.py  result_writer.py  result_writer_aggregation.py  resume_decision.py  resume_generated_files.py  resume_hydration.py  resume_validation.py  run_history.py  safe_files.py  stage_output_aggregation.py  stage_result_document.py  workspace_bundle_validation.py  workspace_git_blob_hash.py  workspace_node_state.py  workspace_rendered_file_validation.py  workspace_source_validation.py  workspace_state_expected_set.py  workspace_state_fields.py  workspace_state_invocations.py  (+1 more)
tests/: __init__.py
tests/helpers/: observability.py  render_fixtures.py  resume.py  resume_locks.py  resume_validation.py  workspace_branch_export.py  workspace_cli_cleanup.py  workspace_lineage_bundles.py  workspace_preflight.py  workspace_records.py  workspace_service.py  workspace_source_policy.py  workspace_workflow_fixtures.py  workspace_workflow_runner.py  workspace_worktree_reuse.py
tests/integration/: compiled_plan_helpers.py
(+985 files in other folders)
