[project]
name = "orchestrator-cli"
version = "0.1.0"
description = "A CLI orchestrator for AI agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer[all]>=0.12.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "markdown-it-py>=4.0",
    "rich>=13.0",
    "tzdata; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.6",
]

[project.scripts]
orchestrator = "orchestrator_cli.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator_cli"]
include = [
    "src/orchestrator_cli/py.typed",
    "src/orchestrator_cli/example_templates/*.yml",
    "src/orchestrator_cli/example_templates/*.yaml",
    "src/orchestrator_cli/example_templates/*.md",
    "src/orchestrator_cli/example_templates/**/*.yml",
    "src/orchestrator_cli/example_templates/**/*.yaml",
    "src/orchestrator_cli/example_templates/**/*.md",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ARG"]
ignore = ["E501", "B008"]
dummy-variable-rgx = "^$"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
