[project]
name = "crewplane"
version = "0.1.0-alpha.2"
description = "A Markdown-native control plane for AI coding CLIs"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
dependencies = [
    "typer>=0.12.0",
    "click>=8.0.0",
    "shellingham>=1.3.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "markdown-it-py>=4.0",
    "rich>=13.0",
    "tzdata; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "build>=1.3",
    "packaging>=24.0",
    "pytest>=7.4",
    "ruff>=0.6",
    "twine>=6.0",
]

[project.scripts]
crewplane = "crewplane.cli.app:app"

[project.urls]
Homepage = "https://github.com/crewplaneai/crewplane"
Repository = "https://github.com/crewplaneai/crewplane"
Issues = "https://github.com/crewplaneai/crewplane/issues"
Documentation = "https://github.com/crewplaneai/crewplane/blob/master/docs/index.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crewplane"]
include = [
    "src/crewplane/py.typed",
    "src/crewplane/example_templates/*.yml",
    "src/crewplane/example_templates/*.yaml",
    "src/crewplane/example_templates/*.md",
    "src/crewplane/example_templates/**/*.yml",
    "src/crewplane/example_templates/**/*.yaml",
    "src/crewplane/example_templates/**/*.md",
]

[tool.hatch.build.targets.sdist]
only-include = [
    "LICENSE",
    "README.md",
    "pyproject.toml",
    "src/crewplane",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ARG"]
ignore = ["E501", "B008"]
dummy-variable-rgx = "^$"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
